<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mainToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:clickable="false"
            android:elevation="@dimen/toolbar_elevation"
            android:hapticFeedbackEnabled="true"
            android:minHeight="56dp"
            android:theme="@style/AppTheme"
            app:contentInsetStart="16dp"
            app:contentInsetStartWithNavigation="16dp"
            app:title="@string/app_name"
            app:titleTextColor="@color/colorPrimary"></androidx.appcompat.widget.Toolbar>

        <ScrollView
            style="@android:style/Widget.DeviceDefault.ScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdgeLength="@dimen/fading_edge"
            android:foregroundTint="@color/colorAccent"
            android:foregroundTintMode="add">

            <LinearLayout
                android:id="@+id/ListLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ElecTitleLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/titleLayoutMargin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/elecTitel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="@dimen/list_title_margin_side"
                        android:layout_marginRight="@dimen/list_title_margin_side"
                        android:text="@string/elecListTitle"
                        android:textSize="@dimen/titleLeftTextSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/elecUnit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="@dimen/list_title_margin_side"
                        android:layout_marginRight="@dimen/list_title_margin_side"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/elecUnit"
                        android:textSize="@dimen/titleLeftTextSize" />
                </LinearLayout>

                <energy.adesso.adessoandroidapp.ui.view.NonScrollListView
                    android:id="@+id/elecList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="16dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:id="@+id/GasTitleLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/titleLayoutMargin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/gasTitel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="@dimen/list_title_margin_side"
                        android:layout_marginRight="@dimen/list_title_margin_side"
                        android:text="@string/gasListTitle"
                        android:textSize="@dimen/titleLeftTextSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/gasUnit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="@dimen/list_title_margin_side"
                        android:layout_marginRight="@dimen/list_title_margin_side"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/gasUnit"
                        android:textSize="@dimen/titleLeftTextSize" />

                </LinearLayout>

                <energy.adesso.adessoandroidapp.ui.view.NonScrollListView
                    android:id="@+id/GasList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="gas_meters"
                    android:divider="@null" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="16dp"
                    android:background="?android:attr/listDivider" />

                <LinearLayout
                    android:id="@+id/WaterTitleLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/titleLayoutMargin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/waterTitel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginLeft="@dimen/list_title_margin_side"
                        android:layout_marginRight="@dimen/list_title_margin_side"
                        android:text="@string/water_list_title"
                        android:textSize="@dimen/titleLeftTextSize"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/waterUnit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="@dimen/list_title_margin_side"
                        android:layout_marginRight="@dimen/list_title_margin_side"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/waterUnit"
                        android:textSize="@dimen/titleLeftTextSize" />
                </LinearLayout>

                <energy.adesso.adessoandroidapp.ui.view.NonScrollListView
                    android:id="@+id/WaterList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="75dp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:onClick="onFABClick"
        android:src="?attr/actionModeSelectAllDrawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>