<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ListElement"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"

    android:background="?attr/selectableItemBackground"
    android:contentDescription="@string/listElementDesc"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/listElementImage"
        android:layout_width="@dimen/list_icon_width"
        android:layout_height="@dimen/list_icon_height"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        app:srcCompat="@android:drawable/ic_notification_overlay" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/listElementTopText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="TextView" />

        <TextView
            android:id="@+id/listElementBottomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="TextView"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/listElementRightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="16dp"
        android:layout_weight="0.3"
        android:gravity="right"
        android:text="TextView" />

</LinearLayout>